# Veritas

./: .gitignore  CMakeLists.txt  CMakeSettings.json
VeritasTest/: CMakeLists.txt  main.cpp
includes/: VTButton.h  VTCheckbox.h  VTCircle.h  VTDefs.h  VTDivider.h  VTImage.h  VTInputBox.h  VTLine.h  VTLink.h  VTMenu.h  VTObject.h  VTRect.h  VTRectHollow.h  VTRenderer.h  VTRoundedRect.h  VTText.h  VTTypeableObject.h  VTWindow.h
src/: VTButton.cpp  VTCheckbox.cpp  VTCircle.cpp  VTDivider.cpp  VTImage.cpp  VTInputBox.cpp  VTLine.cpp  VTLink.cpp  VTObject.cpp  VTRect.cpp  VTRectHollow.cpp  VTRenderer.cpp  VTRoundedRect.cpp  VTText.cpp  VTWindow.cpp
